# QuantProjects

./: README.md
CrudeOil/: cl_garch.ipynb
SolanaArb/: Anchor.toml  README.md  package-lock.json  package.json
SolanaArb/app/: app.js  executeMultiInstructions.js  executeTransactions.js  listenToEvents.js  listenToOrcaEvents.js  orcaExplore.ts  portFinanceExplore.ts
SolanaArb/programs/contract/: Cargo.toml
SolanaArb/programs/contract/src/: lib.rs
SolanaArb/tests/: hello-anchor.ts
